Update Testimonials card styling and add Contact Us page

--- a/app/corporate/company-logos/CompanyLogos.module.css
+++ b/app/corporate/company-logos/CompanyLogos.module.css
@@ -1,35 +1,58 @@
-
-
 @keyframes scroll {
-	0% { transform: translateX(0); }
-	100% { transform: translateX(calc(-250px * 7))}
+	0% {
+		transform: translateX(0);
+	}
+
+	100% {
+		transform: translateX(calc(-250px * 7))
+	}
 }
 
 .slider {
-	height: 200px;
+	height: 100px;
 	margin: auto;
-	overflow:hidden;
+	overflow: hidden;
 	position: relative;
 	width: 100%;
-	
+
+	/* for large screens */
+	@media (min-width: 1024px) {
+		height: 200px;
+	}
+
 	.slidetrack {
 		animation: scroll 30s linear infinite;
 		display: flex;
-		width: calc(250px * 20);
+		width: calc(250px * 12);
+
+		/* for large screens */
+		@media (min-width: 1024px) {
+			width: calc(250px * 20);
+		}
 
 	}
+
 	.slide {
-        padding: 10px;
-        background-color: white;
-		height: 200px;
-		width: 450px;
-        display: flex;
-        justify-content: center;
+		padding: 5px;
+		background-color: white;
+		height: 100px;
+		width: 250px;
+		display: flex;
+		justify-content: center;
+
+		/* for large screens */
+		@media (min-width: 1024px) {
+			padding: 10px;
+			background-color: white;
+			height: 200px;
+			width: 450px;
+		}
 	}
-    .slide img {
-        max-width: 100%; 
-        max-height: 100%; 
-        object-fit: contain; 
-        mix-blend-mode: multiply;
-      }
+
+	.slide img {
+		max-width: 100%;
+		max-height: 100%;
+		object-fit: contain;
+		mix-blend-mode: multiply;
+	}
 }
