--- a/app/corporate/company-logos/CompanyLogos.module.css
+++ b/app/corporate/company-logos/CompanyLogos.module.css
@@ -4,12 +4,23 @@
 	}
 
 	100% {
-		transform: translateX(calc(-250px * 7))
+		transform: translateX(calc(-150px * 18))
 	}
 }
+@media (min-width: 1024px) {
+
+@keyframes scroll {
+	0% {
+		transform: translateX(0);
+	}
+
+	100% {
+		transform: translateX(calc(-450px * 18))
+	}
+}}
 
 .slider {
-	height: 100px;
+	height: 200px;
 	margin: auto;
 	overflow: hidden;
 	position: relative;
@@ -21,13 +32,13 @@
 	}
 
 	.slidetrack {
-		animation: scroll 30s linear infinite;
+		animation: scroll 120s linear infinite;
 		display: flex;
 		width: calc(250px * 12);
 
 		/* for large screens */
 		@media (min-width: 1024px) {
-			width: calc(250px * 20);
+			width: calc(530px * 18);
 		}
 
 	}
@@ -36,7 +47,7 @@
 		padding: 5px;
 		background-color: white;
 		height: 100px;
-		width: 250px;
+		/* width: 250px; */
 		display: flex;
 		justify-content: center;
 
@@ -45,7 +56,7 @@
 			padding: 10px;
 			background-color: white;
 			height: 200px;
-			width: 450px;
+			width: max-content
 		}
 	}
 
@@ -53,6 +64,6 @@
 		max-width: 100%;
 		max-height: 100%;
 		object-fit: contain;
-		mix-blend-mode: multiply;
+		mix-blend-mode: darken;
 	}
 }
