Update phone number and email address in Footer and fix slider positioning in Testimonials

--- a/app/Components/Sections/Testimonials/Testimonials.module.css
+++ b/app/Components/Sections/Testimonials/Testimonials.module.css
@@ -31,13 +31,13 @@
 }
 
 .slider::after {
-  right: 0;
+  right: -1px;
   top: 0;
   transform: rotateZ(180deg);
 }
 
 .slider::before {
-  left: 0;
+  left: -1px;
   top: 0;
 }
 
